# z_graph

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LICENSE-MIT  README.md  commit.sh  docker-compose.yml  fast.sh  package-lock.json  package.json
backend/: .env.example  package.json  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/application/: router.py
backend/app/core/: config.py
backend/app/core/api/: health.py  main.py  ontology.py  project.py  prompt_labels.py  router.py
backend/app/core/backend_client_factory/: client_factory.py  schema.py
backend/app/core/backend_client_factory.py/: client_factory.py
backend/app/core/backend_client_factory.py/graphiti/: graphiti_client.py  patcher.py
backend/app/core/backend_client_factory.py/zep/: zep_client.py
backend/app/core/backend_client_factory/graphiti/: graphiti_client.py  patcher.py
backend/app/core/backend_client_factory/zep/: zep_client.py
backend/app/core/langfuse_versioning/: description.md  langfuse_category_label_retriever.py  langfuse_prompt_retriever.py  prompt_provider.py  zepgraph_langfuse_sync_policy.py  zepgraph_langfuse_sync_pull_layout.py
backend/app/core/langfuse_versioning/fallback_entites/: organization.json  person.json
backend/app/core/langfuse_versioning/fallback_entities/: organization.json
backend/app/core/langfuse_versioning/fallback_entities/production/: person.json
backend/app/core/langfuse_versioning/ontology_section/: descirption.md
backend/app/core/langfuse_versioning/ontology_section/prompts/: ONTOLOGY_SYSTEM_PROMPT.md
backend/app/core/langfuse_versioning/prompts/: ENTITES_EXAMPLES_IN_SYSTEM_PROMPT.md  ENTITES_EXCEPTIONS_IN_SYSTEM_PROMPT.md  ENTITT_EXCEPTIONS_IN_SYSTEM_PROMPT.md  ENTITY_EXAMPLES_IN_SYSTEM_PROMPT.md  ONTOLOGY_SYSTEM_PROMPT.md  ORGANIZATION_EXAMPLES_IN_SYSTEM_PROMPT.md  ORGANIZATION_EXCEPTIONS_IN_SYSTEM_PROMPT.md  RELATIONS_IN_SYSTEM_PROMPT.md  USER_EXTRACTION_PROMPT.md
backend/app/core/langfuse_versioning/prompts/latest/: ORGANIZATION_EXCEPTIONS_IN_SYSTEM_PROMPT.md  USER_EXTRACTION_PROMPT.md
backend/app/core/langfuse_versioning/prompts/production/: ONTOLOGY_SYSTEM_PROMPT.md
backend/app/core/langfuse_versioning/sub_queries/: SUB_GRAPH_USER_PROMPT.md
backend/app/core/langfuse_versioning/sub_queries/latest/: SUB_GRAPH_SYSTEM_PROMPT.md
backend/app/core/langfuse_versioning/sub_queries/medical/: SUB_GRAPH_USER_PROMPT.md
backend/app/core/langfuse_versioning/sub_queries/production/: SUB_GRAPH_SYSTEM_PROMPT.md
backend/app/core/llm/: __init__.py  factory.py  llm_client.py  types.py
backend/app/core/llm/providers/: __init__.py  abstractions.py  base.py
backend/app/core/llm/providers/openai/: __init__.py  formatter.py  (+2 more)
backend/app/core/managers/: __init__.py  batch_process_manager.py  project_manager.py  prompt_label_manager.py  task_manager.py  zep_manager.py
backend/app/core/schemas/: __init__.py  project.py  task.py  zep_operation.py
backend/app/core/service/: auto_label_generator.py  graph_builder.py  ontology_generator.py  retrieval.py  zep_entity_reader.py  zep_graph_memory_updater.py  zep_service.py  zep_tools.py
backend/app/core/utils/: chucking.py  db_query.py  langfuse.py  llm_client.py  logger.py  logging.py  retry.py  text_file_parser.py  text_processor.py
backend/notebooks/: test_search.ipynb
backend/scripts/: clean_langfuse_prompts.py  clean_langfuse_prompts.sh  sync_from_langfuse.py  sync_from_langfuse.sh  sync_to_langfuse.py  sync_to_langfuse.sh
backend/tests/: test_graph_build_resume.py  test_graphiti_ontology_cache.py  test_langfuse_graphiti_tracing.py
(+107 files in other folders)
